--- a/src/view/MonAnManager.fxml
+++ b/src/view/MonAnManager.fxml
@@ -63,7 +63,7 @@
                                           <Font size="18.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="txtNquyenLieu" layoutX="15.0" layoutY="318.0" prefHeight="48.0" prefWidth="202.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="39.0">
+                                    <TextField fx:id="txtNguyenLieu" layoutX="15.0" layoutY="318.0" prefHeight="48.0" prefWidth="202.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="39.0">
                                        <font>
                                           <Font size="18.0" />
                                        </font>
@@ -126,11 +126,23 @@
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                                    <TextField fx:id="txtTenMon" layoutX="15.0" layoutY="65.0" prefHeight="46.0" prefWidth="228.0" style="-fx-border-color: #3156DD;" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="13.0">
-                                                        <font>
-                                                            <Font size="18.0" />
-                                                        </font>
-                                                    </TextField>
+                                    <TilePane alignment="CENTER" layoutY="350.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                          <Button fx:id="btnShowAll" mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: #3F2B63;" text="Hiện tất cả" textFill="WHITE">
+                                             <graphic>
+                                                <FontAwesomeIconView fill="WHITE" glyphName="ROTATE_LEFT" size="23" />
+                                             </graphic>
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                    </TilePane>
+                                    <TextField fx:id="txtTenMon" layoutX="15.0" layoutY="65.0" prefHeight="46.0" prefWidth="228.0" style="-fx-border-color: #3156DD;" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="13.0">
+                                        <font>
+                                            <Font size="18.0" />
+                                        </font>
+                                    </TextField>
                                     <TextField fx:id="txtSoNguoi" layoutX="20.0" layoutY="170.0" prefHeight="40.0" prefWidth="75.0" />
                                     <Label layoutX="20.0" layoutY="30.0" text="Tên hoặc mô tả" textFill="WHITE">
                                        <font>
@@ -140,7 +152,7 @@
                                        <children>
                                           <Button fx:id="btnTimMonAn" mnemonicParsing="false" onAction="#timMonAn" style="-fx-background-color: #3F2B63;" text="Tìm kiếm" textFill="WHITE">
                                              <graphic>
-                                                                <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" size="23" />
+                                                <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" size="23" />
                                              </graphic>
                                              <font>
                                                 <Font size="18.0" />
@@ -162,14 +174,6 @@
                                           <Font size="18.0" />
                                        </font>
                                     </CheckBox>
-                                    <Button fx:id="btnShowAll" layoutX="62.0" layoutY="357.0" mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: #3F2B63;" text="Hiện tất cả" textFill="WHITE">
-                                       <graphic>
-                                          <FontAwesomeIconView fill="WHITE" glyphName="ROTATE_LEFT" size="23" />
-                                       </graphic>
-                                       <font>
-                                          <Font size="18.0" />
-                                       </font>
-                                    </Button>
                                  </children></AnchorPane>
                           </content>
                         </Tab>
