--- a/src/view/BanAnManager.fxml
+++ b/src/view/BanAnManager.fxml
@@ -161,14 +161,18 @@
                                        <font>
                                           <Font size="18.0" />
                                        </font></TextField>
-                                    <Button fx:id="btnShowAll" layoutX="61.0" layoutY="430.0" mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: #3F2B63;" text="Hiện tất cả" textFill="WHITE">
-                                       <graphic>
-                                          <FontAwesomeIconView fill="WHITE" glyphName="ROTATE_LEFT" size="23" />
-                                       </graphic>
-                                       <font>
-                                          <Font size="18.0" />
-                                       </font>
-                                    </Button>
+                                    <TilePane alignment="CENTER" layoutY="430.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                          <Button fx:id="btnShowAll" mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: #3F2B63;" text="Hiện tất cả" textFill="WHITE">
+                                             <graphic>
+                                                <FontAwesomeIconView fill="WHITE" glyphName="ROTATE_LEFT" size="23" />
+                                             </graphic>
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                    </TilePane>
                                  </children>
                               </AnchorPane>
                         </content>
