--- a/src/view/BanDatManager.fxml
+++ b/src/view/BanDatManager.fxml
@@ -18,14 +18,14 @@
         <items>
           <AnchorPane maxWidth="512.0" minWidth="256.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #7156DD;">
                <children>
-                  <TextField layoutX="10.0" layoutY="155.0" prefHeight="41.0" prefWidth="274.0" style="-fx-border-color: #3156DD;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
+                  <TextField fx:id="txtTenKH" layoutX="10.0" layoutY="155.0" prefHeight="41.0" prefWidth="274.0" style="-fx-border-color: #3156DD;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
                   <TilePane alignment="CENTER" layoutY="410.0" prefHeight="39.0" prefWidth="301.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
-                        <Button mnemonicParsing="false" style="-fx-background-color: #3F2B63;" text="Tìm kiếm" textFill="WHITE">
+                        <Button fx:id="btnTimBanDat" mnemonicParsing="false" onAction="#timBanDat" style="-fx-background-color: #3F2B63;" text="Tìm kiếm" textFill="WHITE">
                            <graphic>
                               <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" size="23" />
                            </graphic>
@@ -55,17 +55,29 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <DatePicker layoutX="11.0" layoutY="69.0" prefHeight="41.0" prefWidth="242.0" />
-                  <TextField layoutX="10.0" layoutY="247.0" prefHeight="39.0" prefWidth="274.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
+                  <DatePicker fx:id="dpNgayDat" layoutX="11.0" layoutY="69.0" prefHeight="41.0" prefWidth="242.0" />
+                  <TextField fx:id="txtCMND" layoutX="10.0" layoutY="247.0" prefHeight="39.0" prefWidth="274.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <TextField layoutX="10.0" layoutY="338.0" prefHeight="39.0" prefWidth="274.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
+                  <TextField fx:id="txtSoDT" layoutX="10.0" layoutY="338.0" prefHeight="39.0" prefWidth="274.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
+                  <TilePane alignment="CENTER" layoutX="1.0" layoutY="462.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button fx:id="btnShowAll" mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: #3F2B63;" text="Hiện tất cả" textFill="WHITE">
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="ROTATE_LEFT" size="23" />
+                           </graphic>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </TilePane>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
